--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
       h1{ 
         text-align: center; 
       } 
-      .get_quote{ 
+      .quote{ 
         margin: 50px; 
         font-size: 24px; 
         text-align: center; 
@@ -22,7 +22,9 @@
   </head> 
   <body> 
     <h1>Daily Quote</h1> 
-    <div class="get_quote"></div> 
+    <div class="quote">
+      <img>
+    </div> 
     <button>Get Quote</button> 
     <script type="text/javascript" src="/eel.js"></script> 
     <script src="./script.js"></script> 
